--- a/sobre.html
+++ b/sobre.html
@@ -26,23 +26,21 @@
             </div>
         </main>
     </header>
-    <div class="contentSobre">
+    <main class="content">
             <h1>Sobre nós</h1>
-            <div class="textSobre">
             <p>É muito comum a compra de alimentos de hortifruti em supermercados e feiras, que muitas vezes contam com a presença de agrotóxicos e uma produção e distribuição de grande impacto social e ambiental negativos. Com o passar dos anos, uma parcela da população vem se tornando mais exigente quanto à qualidade dos alimentos que consome, bem como todos os fatores que envolvem até que eles cheguem à sua mesa. Hortas orgânicas cultivadas por meio da agricultura familiar, além de produzirem produtos mais saudáveis, incentivam o comércio de pequenos produtores locais. Infelizmente, tais alternativas ainda não possuem tanta visibilidade quanto os grandes comércios, fazendo com que muitas pessoas que buscam por ela não saibam como encontrar ou acreditem que alimentos orgânicos são somente os presentes nas prateleiras dos supermercados, de altíssimo custo.
                 Sabendo da importância do consumo de pequenos produtores da região para a manutenção da economia local e de alimentos orgânicos para a saúde e meio ambiente a HortaJá propõe integrar o consumidor e os agricultores para facilitar a busca e popularizar alimentos orgânicos!</p>
-                <img src="./img/hortaSobre.png">
-            </div>
-    </div>
-    <div class="indiqueHorta">
-        <h2>Indique um horta!</h2>
-        <form class="formIndicacao">
-            <input type="text" value="Nome da Horta">
-            <input type="text" value="Cidade, Estado">
-            <input type="text" value="Contato da horta">
-            <input type="submit" value="Enviar">
-        </form>
-    </div>
+            <img src="./img/hortaSobre.png">
+        <div class="indiqueHorta">
+            <h2>Indique um horta!</h2>
+            <form class="formIndicacao">
+                <input type="text" placeholder="Nome da Horta">
+                <input type="text" placeholder="Cidade, Estado">
+                <input type="text" placeholder="Contato da horta">
+                <input type="submit" class="submit" placeholder="Enviar">
+            </form>
+        </div>
+    </main>
 </body>
 
 </html>
