--- a/hortas.html
+++ b/hortas.html
@@ -41,7 +41,7 @@
                 <h3>Avenida Pereira Barreto, 459, Jardim Cinthia, São Bernardo do Campo, SP, Brasil</h3>
                 <p>Segunda a sábado das 09:00 às 18:30<br>
                 Produtos de qualidade e sem veneno para a sua família! Possuímos alimentos variados a um custo acessível.<br>
-                Contato: 11 90000-1111<span><a href="">Visitar perfil</a></span></p>
+                Contato: 11 90000-1111<span><a href="./perfil_horta.html">Visitar perfil</a></span></p>
             </div>
     </div>
 </body>
