ultima versao do projeto

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/login.css">
+    
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>HortaJá</title>
@@ -42,7 +43,7 @@
                 </div>
             <div class="formContent2">
                 <form id="login-form">
-                <input class="email" type="text" name="email" placeholder="exemplo@exemplo.com" id="email-field" required><span><img src=""></span></input>
+                <input class="email" type="text" name="email" placeholder="exemplo@exemplo.com" id="email-field" required></input>
                 <input type="password" name="password" placeholder="senha" id="password-field" required>
                 <p>Ainda não possui uma conta? <a href="cadastro.html">Cadastre-se.</a></p>
                 <input class="submitButton" type="submit" value="Entrar" id="login-form-submit">
