--- a/sobre.html
+++ b/sobre.html
@@ -20,6 +20,8 @@
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./sobre.html">Sobre</a></li>
                         <li><a href="./hortas.html">Hortas</a></li>
+                        <li><a class="perfilEditar" href="./perfil_consumidor.html">editar perfil</a></li>
+
                     </ul>
                 </div>
             
